top banner added

--- a/index.html
+++ b/index.html
@@ -1,18 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Neshad protfileo</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,300&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <section class="top-banner">
+      <div class="half-width">
+        <h1>Welcome To</h1>
+        <h1><span class="orange-color">Neshad</span> World!</h1>
+        <h3>Bulid Climber and Train Stoppert</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut explicabo
+          veniam perspiciatis blanditiis laboriosam, nisi nihil similique facere
+          quia nesciunt eveniet id necessitatibus totam minus architecto quas
+          doloribus sapiente asperiores et sit rerum dicta dolorum. Unde quas
+          minima fuga dicta dolor aliquid, aspernatur omnis impedit! Nemo eum
+          quos sint provident! Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Magni nesciunt error velit itaque ducimus
+          temporibus. Corporis cupiditate autem ab sequi a. Laudantium, porro
+          voluptates. Quod corrupti ad ut cum! Modi.
+        </p>
+        <a
+          class="link-button"
+          target="_blank"
+          href="https://www.facebook.com/mdneashad.sheikh?mibextid=ZbWKwL "
+        >
+          HIRE ME</a
+        >
+      </div>
+      <div class="half-width">
+        <img src="img/Neshad.png" alt="" />
+      </div>
+    </section>
     <!-- Section -1 -->
 
     <!-- Section -2 -->
 
     <!-- Section -3 -->
-    
-</body>
+  </body>
 </html>
