--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- Section -1 -->
     <section class="top-banner">
       <div class="half-width">
         <h1>Welcome To</h1>
@@ -43,10 +44,24 @@
         <img src="img/Neshad.png" alt="" />
       </div>
     </section>
-    <!-- Section -1 -->
-
     <!-- Section -2 -->
+    <section class="derem-big">
+      <div class="half-width">
+        <img src="img/logo.png" alt="" />
+      </div>
 
+      <div class="half-width">
+        <h1>DEREM BIG</h1>
+        <h2>Become a web Developer</h2>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+        neque voluptatum eos animi perferendis officia nulla, sunt doloremque
+        non, praesentium dicta enim iste similique nobis tempore asperiores
+        debitis. Consequatur deleniti, quo quibusdam placeat eveniet et, ab ipsa
+        atque adipisci rerum autem architecto?
+
+        <a class="link-button" target="_blank" href=""> DOWNLOAD RUSUME</a>
+      </div>
+    </section>
     <!-- Section -3 -->
   </body>
 </html>
