styled boder and added footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   </head>
   <body>
     <!-- Section -1 -->
-    <section class="top-banner">
+
+    <section class="top-banner flexible-container">
       <div class="half-width">
         <h1>Welcome To</h1>
         <h1><span class="orange-color">Neshad</span> World!</h1>
@@ -45,7 +46,7 @@
       </div>
     </section>
     <!-- Section -2 -->
-    <section class="derem-big">
+    <section class="derem-big flexible-container">
       <div class="half-width">
         <img src="img/logo.png" alt="" />
       </div>
@@ -63,5 +64,36 @@
       </div>
     </section>
     <!-- Section -3 -->
+    <section class="experience-area">
+      <h1>Experiences</h1>
+      <div class="flexible-container">
+        <div id="full-stack-developar" class="experience-item">
+          <h2>FULL STACK DEVELOPAR</h2>
+          <h3 class="orange-color">2024-Present | Pro Level Developer</h3>
+          <p>
+            Bangla News Papers: Newspaper is a good source of knowledge. We can
+            learn a lot and stay updated with the worlds latest update and
+            status via bangla newspaper. There are over 1000+ Newspaper
+            published daily from Bangladesh. Most of them is from the capital of
+            bangladesh, Dhaka. Prothom-alo is the most popular Bangla daily
+            newspaper. Bangladesh Pratidin is the highest Circulated Newspap
+          </p>
+        </div>
+
+        <div id="baby-web-developer" class="experience-item">
+          <h2>Baby Web Developer</h2>
+          <h3 class="orange-color">2022-2024 | Hero Learnar</h3>
+          <p>
+            Bangladesh News: Collection (list) of all online Bangla Newspaper
+            and Bengali News Agency. Find 24x7 latest Bangla News Updates from
+            Most popular BD Newspapers - 24 Live News, BD News 24, Bangla News
+            24 and rest of all continuously updated Bangla News sites.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
+  <footer>
+    <p>@ Peter Parkar 2023, a Programming Hero intiative.</p>
+  </footer>
 </html>
