--- a/index.html
+++ b/index.html
@@ -51,19 +51,22 @@
         <img src="img/logo.png" alt="" />
       </div>
 
+      <!-- Section -4 -->
       <div class="half-width">
         <h1>DEREM BIG</h1>
         <h2>Become a web Developer</h2>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
-        neque voluptatum eos animi perferendis officia nulla, sunt doloremque
-        non, praesentium dicta enim iste similique nobis tempore asperiores
-        debitis. Consequatur deleniti, quo quibusdam placeat eveniet et, ab ipsa
-        atque adipisci rerum autem architecto?
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur
+          neque voluptatum eos animi perferendis officia nulla, sunt doloremque
+          non, praesentium dicta enim iste similique nobis tempore asperiores
+          debitis. Consequatur deleniti, quo quibusdam placeat eveniet et, ab
+          ipsa atque adipisci rerum autem architecto?
+        </p>
 
         <a class="link-button" target="_blank" href=""> DOWNLOAD RUSUME</a>
       </div>
     </section>
-    <!-- Section -3 -->
+    <!-- Section -4 -->
     <section class="experience-area">
       <h1>Experiences</h1>
       <div class="flexible-container">
